Update Python Crash Course file

--- a/1.02/10_10/code_along/01-Python Crash Course.ipynb
+++ b/1.02/10_10/code_along/01-Python Crash Course.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Material inspired by Jose Portilla's courses.\n",
     "\n",
-    "**This notebook is just a code reference for the videos, no written explanations here**\n",
+    "**This notebook is just a code reference for lecture, minimal written explanations here**\n",
     "\n",
     "This notebook will just go through the basic topics in order:\n",
     "\n",
@@ -105,7 +105,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strings"
+    "## Strings\n",
+    "There are many ways of writing strings in our code. We want to make sure we are able to manipulate and use strings as we desire. This is a super important skill to have!"
    ]
   },
   {
@@ -170,11 +171,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'w'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# string indexing"
+    "# string indexing\n",
+    "# we start counting at index-0 \n",
+    "our_string = \"what a wonderful world\"\n",
+    "\n",
+    "our_string[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get the last letter by going to the negatives\n",
+    "our_string[-1]"
    ]
   },
   {
@@ -183,7 +220,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adding to a string"
+    "#get a range of letters\n",
+    "our_string[0:5]"
    ]
   },
   {
@@ -194,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "'654321'"
+       "'wa  odru o'"
       ]
      },
      "execution_count": 4,
@@ -203,16 +241,182 @@
     }
    ],
    "source": [
-    "# manually reversing a string\n"
+    "#skip letters\n",
+    "our_string[0:20:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'w or l'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# replace\n"
+    "#print everythig but skip letters\n",
+    "our_string[::4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'what a wonderful world I love it!'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# adding to a string\n",
+    "new_string = our_string + \" I love it!\"\n",
+    "new_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dlrow lufrednow a tahw'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# manually reversing a string\n",
+    "# reverse index\n",
+    "our_string[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'whut u wonderful world'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# str.replace() lets you replace parts of the string\n",
+    "replaced_string = our_string.replace('w','u')\n",
+    "replaced_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'where a wonderful world'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "replaced_string = our_string.replace('what','where')\n",
+    "replaced_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My friend Tim is a instructor at TKH'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# .format lets us put variables in the string at the end (mostly for Python2)\n",
+    "name = \"Tim\"\n",
+    "work = \"TKH\"\n",
+    "job = \"instructor\"\n",
+    "\n",
+    "\"My friend {name} is a {job} at {work}\".format(name=name, job=job, work=work)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My friend Tim is a instructor at TKH'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"My friend {0} is a {1} at {2}\".format(name, job, work)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My friend Tim is a instructor at TKH.'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# f-string\n",
+    "f\"My friend {name} is a {job} at {work}.\""
    ]
   },
   {
@@ -230,7 +434,7 @@
    },
    "outputs": [],
    "source": [
-    "st = 'hello my name is Sam'"
+    "st = 'hello my name is Tim'"
    ]
   },
   {
@@ -250,6 +454,7 @@
     }
    ],
    "source": [
+    "# Makes everything lowercase\n",
     "st.lower()"
    ]
   },
@@ -270,6 +475,7 @@
     }
    ],
    "source": [
+    "# Makes everything uppercase\n",
     "st.upper()"
    ]
   },
@@ -1634,7 +1840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
