--- a/1.02/10_10/code_along/01-Python Crash Course.ipynb
+++ b/1.02/10_10/code_along/01-Python Crash Course.ipynb
@@ -428,13 +428,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "st = 'hello my name is Tim'"
+    "st = 'hello, my name is Tim'"
    ]
   },
   {
@@ -481,30 +479,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['hello', 'my', 'name', 'is', 'Sam']"
+       "['hello,', 'my', 'name', 'is', 'Tim']"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#breaks up each word into a list, based on the split criteria, default is space\n",
     "st.split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello ', 'y na', 'e is Ti', '']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#you lose what you use to split on!\n",
+    "\n",
+    "st.split('m')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', ' my name is Tim']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# most commonly you're either using space or comma\n",
+    "st.split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tweet = 'Go Sports! #Sports'"
@@ -512,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +561,7 @@
        "['Go Sports! ', 'Sports']"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -541,104 +581,13 @@
        "'Sports'"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tweet.split('#')[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "lst = [1,2,3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lst.pop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lst"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'x' in [1,2,3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'x' in ['x','y','z']"
    ]
   },
   {
@@ -1332,6 +1281,95 @@
    ],
    "source": [
     "nest[3][2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'x' in [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'x' in ['x','y','z']"
    ]
   },
   {
