finish creating exercises

--- a/1.02/10_10/lab/02-Python Crash Course Exercises.ipynb
+++ b/1.02/10_10/lab/02-Python Crash Course Exercises.ipynb
@@ -15,14 +15,17 @@
    "source": [
     "## Exercises\n",
     "\n",
-    "Answer the questions or complete the tasks outlined in bold below, use the specific method described if applicable."
+    "Answer the questions or complete the tasks outlined below, use the specific method described if applicable.\n",
+    "**The code in the answer cell is just the output, not the answer. We put it in there so that it won't go away if you accidentally run a cell.**\n",
+    "\n",
+    "Some of these may be hard! That is on purpose. Work with your classmates and google t"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** What is 7 to the power of 4?**"
+    "**What is 7 to the power of 4?**"
    ]
   },
   {
@@ -34,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,22 +46,24 @@
        "2401"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "2401"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Split this string:**\n",
+    "**Split this string:**\n",
     "\n",
     "    s = \"Hi there Sam!\"\n",
     "    \n",
-    "**into a list. **"
+    "**into a list.**"
    ]
   },
   {
@@ -72,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -81,25 +86,29 @@
        "['Hi', 'there', 'dad!']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "['Hi', 'there', 'dad!']"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Given the variables:**\n",
+    "**Given the variables:**\n",
     "\n",
     "    planet = \"Earth\"\n",
     "    diameter = 12742\n",
     "\n",
-    "** Use .format() to print the following string: **\n",
+    "**Use .format() to print the following string:**\n",
     "\n",
-    "    The diameter of Earth is 12742 kilometers."
+    "    The diameter of Earth is 12742 kilometers.\n",
+    "    \n",
+    "**Do the same using an f-string**"
    ]
   },
   {
@@ -116,24 +125,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The diameter of Earth is 12742 kilometers.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'The diameter of Earth is 12742 kilometers.'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "f\"The diameter of Earth is 12742 kilometers.\""
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Given this nested list, use indexing to grab the word \"hello\" **"
+    "**Given this nested list, use indexing to grab the word \"hello\"**"
    ]
   },
   {
@@ -163,13 +184,56 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "'hello'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Given the following list, use list comprehension to triple each number**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6, 9, 12]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Given this nested dictionary grab the word \"hello\". Be prepared, this will be annoying/tricky **"
+    "**Given this nested dictionary grab the word \"hello\". Be prepared, this will be annoying/tricky**"
    ]
   },
   {
@@ -197,13 +261,15 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "'hello'"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** What is the main difference between a tuple and a list? **"
+    "**What is the main difference between a tuple and a list?**"
    ]
   },
   {
@@ -213,15 +279,118 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Tuple is immutable"
+    "**Given the following Tuple, unpack it into the right number of variables**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = ('red','blue','green')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('red', 'blue', 'green')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "('red', 'blue', 'green')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Create a function that grabs the email website domain from a string in the form: **\n",
+    "**Given the following lists, add them with zip, and print the answer**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_1 = 1, 2, 3\n",
+    "list_2 = 3, 4, 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item1, item2 in zip(list_1, list_2):\n",
+    "    print(item1+item2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\"\"\n",
+    "4\n",
+    "6\n",
+    "8\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Create a function that grabs the email website domain from a string in the form:**\n",
     "\n",
     "    user@domain.com\n",
     "    \n",
@@ -258,80 +427,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Create a basic function that returns True if the word 'dog' is contained in the input string. Don't worry about edge cases like a punctuation being attached to the word dog, but do account for capitalization. **"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "'domain.com'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "findDog('Is there a dog here?')"
+    "'domain.com'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Create a function that counts the number of times the word \"dog\" occurs in a string. Again ignore edge cases. **"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countDog('This dog runs faster than the other dog dude!')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** Use lambda expressions and the filter() function to filter out words from a list that don't start with the letter 's'. For example:**\n",
+    "**Use lambda expressions and the filter() function to filter out words from a list that don't start with the letter 's'. For example:**\n",
     "\n",
     "    seq = ['soup','dog','salad','cat','great']\n",
     "\n",
@@ -353,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -362,12 +481,14 @@
        "['soup', 'salad']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "['soup','salad']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -457,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
