--- a/1.02/10_11/lab/recursion_lab.ipynb
+++ b/1.02/10_11/lab/recursion_lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ad929a10",
+   "id": "54bed81f",
    "metadata": {},
    "source": [
     "## Recursion Lab\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b10e4d2",
+   "id": "cb845d44",
    "metadata": {},
    "source": [
     "**Exercise 5.2.** Fermat’s Last Theorem says that there are no positive integers a, b, and c such that\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbf9f3aa",
+   "id": "bb5c225d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6812c5b",
+   "id": "a95b072a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe121d9",
+   "id": "c55db4f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8be447fc",
+   "id": "9aa4e231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92f33b47",
+   "id": "1bd002f9",
    "metadata": {},
    "source": [
     "2. Write a function that prompts the user to input values for a, b, c and n, converts them to\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9edfb0cc",
+   "id": "bbdbebf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +97,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "165741ec",
+   "metadata": {},
+   "source": [
+    "**Exercise 5.3.** If you are given three sticks, you may or may not be able to arrange them in a triangle.\n",
+    "\n",
+    "For example, if one of the sticks is 12 inches long and the other two are one inch long, you will not\n",
+    "be able to get the short sticks to meet in the middle. For any three lengths, there is a simple test to\n",
+    "see if it is possible to form a triangle:\n",
+    "\n",
+    "If any of the three lengths is greater than the sum of the other two, then you cannot\n",
+    "form a triangle. Otherwise, you can. (If the sum of two lengths equals the third, they\n",
+    "form what is called a “degenerate” triangle.)\n",
+    "\n",
+    "1. Write a function named is_triangle that takes three integers as arguments, and that prints\n",
+    "either “Yes” or “No”, depending on whether you can or cannot form a triangle from sticks\n",
+    "with the given lengths."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "621120fb",
+   "id": "535b97ff",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cc4df79",
+   "metadata": {},
+   "source": [
+    "2. Write a function that prompts the user to input three stick lengths, converts them to integers,\n",
+    "and uses is_triangle to check whether sticks with the given lengths can form a triangle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd37bffd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a9f2460",
+   "metadata": {},
+   "source": [
+    "**Exercise 5.4.** What is the output of the following program? Describe or draw a stack diagram that shows the\n",
+    "state of the program when it prints the result. As in, write down what you think this program is trying to do.\n",
+    "\n",
+    "Answer Here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9495e892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recurse(n, s):\n",
+    "    if n == 0:\n",
+    "        print(s)\n",
+    "    else:\n",
+    "        recurse(n-1, n+s)\n",
+    "        recurse(3, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20d459e6",
+   "metadata": {},
+   "source": [
+    "What would happen if you called this function like this: recurse(-1, 0)?"
+   ]
   }
  ],
  "metadata": {
