finalize data structure code along

--- a/1.02/10_11/code_along/basic_data_structures.ipynb
+++ b/1.02/10_11/code_along/basic_data_structures.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cfcad6da",
+   "id": "22408be5",
    "metadata": {},
    "source": [
-    "The stack abstract data type is defined by the following structure and operations. A stack is structured, as described above, as an ordered collection of items where items are added to and removed from the end called the top. Stacks are ordered LIFO. The stack operations are given below.\n",
+    "# Basic Data Structures\n",
+    "This material is adapted from Runestone Problem Solving with Data Structures in Python Ch. 3. We will be using the examples in the book to showcase basic data structures for student awareness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43eac080",
+   "metadata": {},
+   "source": [
+    "## Stack\n",
+    "From Runestone:\n",
+    "\n",
+    "The stack abstract data type is defined by the following structure and operations. A stack is structured, as described above, as an ordered collection of items where items are added to and removed from the end called the top. Stacks are ordered LIFO (last in first out). The stack operations are given below.\n",
+    "\n",
+    "We do this so that we can plan out our function and tool design. Without it, we would just make things willy nilly and not be very productive.\n",
     "\n",
     "Stack() creates a new stack that is empty. It needs no parameters and returns an empty stack.\n",
     "\n",
@@ -25,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd49f5a1",
+   "id": "ef0c9e2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "83ded83e",
+   "id": "a146f369",
    "metadata": {},
    "outputs": [
     {
@@ -69,10 +83,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83744712",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "1162088a",
+   "id": "cc818b07",
    "metadata": {},
    "source": [
+    "## Queues\n",
+    "\n",
     "The queue abstract data type is defined by the following structure and operations. A queue is structured, as described above, as an ordered collection of items which are added at one end, called the rear, and removed from the other end, called the front. Queues maintain a FIFO ordering property. The queue operations are given below.\n",
     "\n",
     "Queue() creates a new queue that is empty. It needs no parameters and returns an empty queue.\n",
@@ -91,38 +115,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae6289be",
+   "id": "cff6e968",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Queue:\n",
-    "    \"\"\"Queue implementation as a list\"\"\"\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        \"\"\"Create new queue\"\"\"\n",
-    "        self._items = []\n",
-    "\n",
-    "    def is_empty(self):\n",
-    "        \"\"\"Check if the queue is empty\"\"\"\n",
-    "        return not bool(self._items)\n",
-    "\n",
-    "    def enqueue(self, item):\n",
-    "        \"\"\"Add an item to the queue\"\"\"\n",
-    "        self._items.insert(0, item)\n",
-    "\n",
-    "    def dequeue(self):\n",
-    "        \"\"\"Remove an item from the queue\"\"\"\n",
-    "        return self._items.pop()\n",
-    "\n",
-    "    def size(self):\n",
-    "        \"\"\"Get the number of items in the queue\"\"\"\n",
-    "        return len(self._items)"
+    "# Lets go through Runestone 3.10, type out each part of the stack and talk about what it means\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5367c754",
+   "id": "41c3f1a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = Queue()\n",
+    "q.enqueue(4)\n",
+    "q.enqueue(\"dog\")\n",
+    "q.enqueue(True)\n",
+    "print(q.size())\n",
+    "q.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62141203",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q.is_empty()\n",
+    "q.enqueue(8.4)\n",
+    "q.dequeue()\n",
+    "q.dequeue()\n",
+    "q.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fddd8c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "125ed4b4",
+   "metadata": {},
+   "source": [
+    "### Fibonnaci\n",
+    "\n",
+    "Lets try implementing Fibonnaci together! Try not to scroll too far down and spoil the answer!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f1057b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -130,7 +180,87 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c372c4",
+   "id": "b07cf89f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d40d8376",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65bd6468",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b422a7c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0791189",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "550cfe0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35e0375",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be3d65b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "476af9b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "922e8827",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14a60ea3",
    "metadata": {},
    "outputs": [],
    "source": [
