Added all documents

--- a/1.03/10_17/code_along/review.ipynb
+++ b/1.03/10_17/code_along/review.ipynb
@@ -20,10 +20,8 @@
     "        self.ap = ap\n",
     "    \n",
     "    def attack(self, other):\n",
-    "        other.reduce(self.ap)\n",
-    "    \n",
-    "    def reduce(self, amount):\n",
-    "        self.health -= amount\n",
+    "        other.ap -= self.ap\n",
+    "\n",
     "\n",
     "pokA = Pokemon(\"charmander\", 100, 20)\n",
     "pokB = Pokemon(\"squirtle\", 100, 30)"
