update stats notebook

--- a/1.04/10_25/intro_stats.ipynb
+++ b/1.04/10_25/intro_stats.ipynb
@@ -80,11 +80,14 @@
    "metadata": {},
    "source": [
     "#### Visualizing data\n",
+    "You will make two graphs: a histogram and a scatter plot. Using the matplotlib.pyplot package generate the histogram using your first list of data.\n",
     "\n",
     "Using the code above, make a second list of 30 random numbers.\n",
-    "Using the two lists you made, create a scatter plot of that random data.\n",
+    "With these two lists, create a scatter plot of that random data.\n",
     "\n",
-    "Hint: read the following: https://matplotlib.org/stable/gallery/shapes_and_collections/scatter.html"
+    "Hint: read the following: \n",
+    "https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html\n",
+    "https://matplotlib.org/stable/gallery/shapes_and_collections/scatter.html"
    ]
   },
   {
@@ -95,6 +98,13 @@
    "source": [
     "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
