--- a/1.05/11_01/ttest.ipynb
+++ b/1.05/11_01/ttest.ipynb
@@ -36,11 +36,9 @@
    "source": [
     "\n",
     "# Given information for one-tailed one-sample Z-test\n",
-    "sample_mean = 110\n",
-    "population_mean = 100\n",
-    "population_std = 15\n",
-    "sample_size = 50\n",
-    "alpha = 0.05"
+    "# Assume we have a sample size of 100 with a mean of 310\n",
+    "# Assume we know the population mean of 280 with a known population std deviation of 20\n",
+    "# At an alpha = 0.05 can we confidently say that these two groups are different?"
    ]
   },
   {
@@ -70,37 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Z-Score: 2.3836564731139807\n",
-      "Critical Z-Score: 1.959963984540054\n",
-      "Reject the null hypothesis.\n",
-      "There is a significant difference between the online and offline classes.\n",
-      "P-Value : 0.01714159544079563\n",
-      "Reject the null hypothesis.\n",
-      "There is a significant difference between the online and offline classes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import scipy.stats as stats\n",
-    " \n",
-    " \n",
-    "# Group A (Offline Classes)\n",
-    "n1 = 50\n",
-    "x1 = 75\n",
-    "s1 = 10\n",
-    " \n",
-    "# Group B (Online Classes)\n",
-    "n2 = 60\n",
-    "x2 = 80\n",
-    "s2 = 12\n",
+    "# Given that we have the following two groups, use a z-test to determine if they are significantly different.\n",
+    "# Group A (Coffee Drinkers), group size of 100, mean of 90, and standard deviation of 12\n",
+    "# Group B (Non-Coffe Drinkers), group size of 110, mean of 75, and standard deviation of 10\n",
+    "\n",
     " "
    ]
   },
