Remove answers from practice notebook

--- a/1.06/11_06/intro_pandas_exercises_solutions.ipynb
+++ b/1.06/11_06/intro_pandas_exercises_solutions.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center><em>Adapted from and under Fair Use Copyright by Pierian Data Inc.</em></center>\n",
+    "<center><em>For more information, visit us at <a href='http://www.pieriandata.com'>www.pieriandata.com</a></em></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pandas Project Exercise - Solutions\n",
     "\n",
     "# The Data\n",
