--- a/1.07/11_13/code_along/answers.ipynb
+++ b/1.07/11_13/code_along/answers.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "# TODO: Load in your data from `../../data/realestate.xlsx`\n",
     "\n",
-    "df = pd.read_excel(\"../../data/realestate.xlsx\")"
+    "df = pd.read_excel(\"../data/realestate.xlsx\")"
    ]
   },
   {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
