--- a/1.07/11_14/lab/explore_lab.ipynb
+++ b/1.07/11_14/lab/explore_lab.ipynb
@@ -212,6 +212,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Cut your dataframe into two groups on \"Purchase Amount (USD)\" using the \"cut\" function\n",
+    "# Assign the labels of \"low\" to the first cut and \"high\" to the second cut\n",
+    "# in a new column called \"Purchase Group\"\n",
+    "# Documentation: https://pandas.pydata.org/docs/reference/api/pandas.cut.html \n",
+    "\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Using this new \"Purchase Group\" column and boolean indexing create a \n",
+    "# new dataframe of only rows where \"Purchase Group\" == \"high\", name this dataframe \"high_group\"\n",
+    "\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Using the \"value_counts\" function, print out the count of each unique state\n",
+    "# in the \"high_group\" dataframe\n",
+    "\n",
+    "..."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
